<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyActivity">

    <LinearLayout
        android:id="@+id/TopLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/SandwichBarText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/_381517"
            android:padding="9dp"
            android:text="@string/my_sandwich_bar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/Header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/sandwiches"
            android:contentDescription="@string/header" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopLinearLayout">

        <LinearLayout
            android:id="@+id/FillingLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/feecd5"
            android:padding="3dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FillingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filling"
                android:textColor="@color/_7f3c06"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FillingSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_7f3c06"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FillingSelection1"
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/ham"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableStart="@drawable/cut_ham_icon"/>

            <CheckBox
                android:id="@+id/chicken"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableStart="@drawable/chicken_icon"/>

            <CheckBox
                android:id="@+id/beef"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableStart="@drawable/beef_icon"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FillingSelection2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/salmon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableStart="@drawable/salmon_icon"/>

            <CheckBox
                android:id="@+id/kebab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:drawableStart="@drawable/kebab_icon2"/>
            
            <View
                android:id="@+id/filler"
                android:layout_width="135dp"
                android:layout_height="1dp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/FillingLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/feecd5"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SideTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/side"
                android:textColor="@color/_7f3c06"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SideSelection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_7f3c06"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FillingSelection3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/tomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/tomato_icon"
                android:text=""/>

            <CheckBox
                android:id="@+id/lettuce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/lettuce_icon"
                android:text=""/>

            <CheckBox
                android:id="@+id/onion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/onion_icon"
                android:text=""/>

            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/cheese_icon"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBelow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCenter">

        <LinearLayout
            android:id="@+id/SizeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:background="@color/feecd5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sizeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/size"
                android:textColor="@color/_7f3c06"
                android:textStyle="bold" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/selectionSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/size6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/_6_inch"/>

            <RadioButton
                android:id="@+id/size9"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/_9_inch"/>

            <RadioButton
                android:id="@+id/size12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/_12_inch"/>
        </RadioGroup>

        <View
            android:id="@+id/divider1"
            android:layout_width="275dp"
            android:layout_height="2dp"
            android:layout_gravity="end"
            android:background="@color/d4b287"/>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sandwichImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                app:srcCompat="@drawable/sandwich_icon"
                android:contentDescription="@string/sandwichicon" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_horizontal"
                android:text="@string/total"
                android:textColor="@color/_84502b"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPriceRM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|end"
                android:text="@string/rm_0_00"
                android:textColor="@color/d83936"
                android:textSize="30sp"
                android:layout_marginEnd="30dp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="360dp"
            android:layout_height="3dp"
            android:layout_gravity="end"
            android:background="@color/d4b287" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/orderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/orderbutton"
                android:padding="5dp"
                app:srcCompat="@drawable/button_order" />

            <ImageButton
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/resetbutton"
                android:padding="5dp"
                app:srcCompat="@drawable/button_reset" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
